Bump OpenAPI version, add test package to base, and more (#352)
Continuing to invest in the base as I rework products using SAF.

* gitignore audit logs that are produced by dev
* Add check against foreign key cascades in the db. Generated drizzle
migrations can easily delete tables this way.
* Add check against root-level business objects in api responses. I
often end up adding other resources to a response and it's easier to
just have responses be expandable by default.
* Update openapi version to 3.1.0, use simplified null response form.
* Restrict openapi tags to a known set, error if an undeclared one is
used. This way we know all tags do what they describe, and can be
trusted.
* Reorganize style files. Often agents will do spot overrides rather
than using vuetify's classes and variables to make changes systemically.
Also has a non-vuetify global rules file, and makes sure static domains
share all these style files.
* Adopt another top-level service package (alongside http, db, spec,
sdk, etc): test. This is where agents are encouraged to put shared
utilities, especially factories for tests and fake handlers.
